Baseline ansible script for kali linux

--- a/roles/common/tasks/binaries.yml
+++ b/roles/common/tasks/binaries.yml
@@ -1,15 +1,10 @@
-- name: Download Aquatone Pre-compiled Binaries -- Unzip Files
-  ansible.builtin.unarchive:
-    src: "{{aquatone}}"
-    dest: /usr/bin
-    remote_src: yes
-    group: "{{ group }}"
-    mode: 0755
+# If you add any tasks here, don't forget to uncomment in main.yml
 
-- name: Download Assetfinder Pre-compiled Binaries -- Unzip Files
-  ansible.builtin.unarchive:
-    src: "{{assetfinder}}"
-    dest: /usr/bin
-    remote_src: yes
-    group: "{{ group }}"
-    mode: 0755
+# Example
+# - name: Download Aquatone Pre-compiled Binaries -- Unzip Files
+#   unarchive:
+#     src: "{{aquatone}}"
+#     dest: /usr/bin
+#     remote_src: yes
+#     group: "{{ group }}"
+#     mode: 0755
