--- a/roles/common/tasks/env.yml
+++ b/roles/common/tasks/env.yml
@@ -1,67 +1,45 @@
 ---
 # Env commands
 - name: Hush Login for ssh
-  ansible.builtin.command: touch ~/.hushlogin
+  file:
+    path: "{{ ansible_env.HOME }}/.hushlogin"
+    state: touch
+  become: True
 
 - name: Set zsh as default shell
   user:
     name: "{{ zsh_user }}"
     shell: /bin/zsh
-  become: true
+  become: True
 
- - name: Get stats of a file
-  ansible.builtin.stat:
-    path: "{{ ansible_env.HOME }}/.zshrc"
-  register: zsh
+- name: Copy .zshrc
+  copy:
+    src: "files/.zshrc"
+    dest: "{{ ansible_env.HOME }}/.zshrc"
+    mode: 0644
 
-- name: zsh debug    
-  ansible.builtin.debug:
-    msg: "zshrc file does not exist (path doesn't exist)"
-  when: zsh.stat.exists == False
+- name: Copy aliases
+  copy:
+    src: "files/.aliases"
+    dest: "{{ ansible_env.HOME }}/.aliases"
+    mode: 0644
 
-- name: zsh debug
-  ansible.builtin.debug:
-    msg: "zshrc exists"
-  when: zsh.stat.exists 
+- name: Remove useless directories
+  file:
+    path: "{{ ansible_env.HOME }}/{{ item }}"
+    state: absent
+  loop:
+    - Documents/
+    - Music/
+    - Pictures/
+    - Public/
+    - Templates/
+    - Videos/
 
-- name: Edit .zshrc
-  ansible.builtin.blockinfile:
-    path: "{{ ansible_env.HOME }}/.zshrc"
-    backup: yes
-    block: |
-      export GOROOT=/usr/lib/go
-      export GOPATH=$HOME/go
-      export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
-      
-      #export PATH="$PATH:/home/user/.local/bin"
-      
-      ## grep aliases
-      alias grep="grep --color=auto"
-
-      ## List open ports
-      alias ports="netstat -tulanp"
-
-      ## Extract file, example. "ex package.tar.bz2"
-      ex() {
-        if [[ -f $1 ]]; then
-          case $1 in
-            *.tar.bz2) tar xjf $1 ;;
-            *.tar.gz)  tar xzf $1 ;;
-            *.bz2)     bunzip2 $1 ;;
-            *.rar)     rar x $1 ;;
-            *.gz)      gunzip $1  ;;
-            *.tar)     tar xf $1  ;;
-            *.tbz2)    tar xjf $1 ;;
-            *.tgz)     tar xzf $1 ;;
-            *.zip)     unzip $1 ;;
-            *.Z)       uncompress $1 ;;
-            *.7z)      7z x $1 ;;
-            *)         echo $1 cannot be extracted ;;
-          esac
-        else
-          echo $1 is not a valid file
-        fi
-      }
-      # ex() is copied from https://github.com/Raikia/Kali-Setup/blob/master/kali.py
-
-
+- name: Make symlink to shared folder
+  file:
+    src: "{{ shared_location }}"
+    dest: "{{ ansible_env.HOME }}/shared"
+    owner: "{{ ansible_env.USER }}"
+    group: "{{ ansible_env.USER }}"
+    state: link
