--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,11 +1,1 @@
-# Kali inventory file
-
-[kali]
-<IP Address or addresses>
-
-[kali:vars]
-ansible_connection=ssh
-ansible_user=<username>
-ansible_python_interpreter=python3
-
-
+localhost
