--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -1,31 +1,24 @@
----  
+---
 - name: apt-update packages
-  ansible.builtin.apt:
+  apt:
     update_cache: yes
 
-- name: Remove useless packages from cache
-  ansible.builtin.apt:
-    autoclean: true      
- 
 - name: Install multiple apt packages
-  ansible.builtin.apt:
+  apt:
     update_cache: yes
     force_apt_get: yes
     install_recommends: yes
     name: "{{ item }}"
-    state: latest 
-  loop: "{{ kali_packages }}"
-  
+    state: latest
+  loop: "{{ apt_packages }}"
+
 - name: Remove useless packages from cache
-  ansible.builtin.apt:
-    autoclean: true      
- 
-- name: Remove package dependencies that are no longer required 
-  ansible.builtin.apt:
-    autoremove: true        
+  apt:
+    autoclean: true
+
+- name: Remove package dependencies that are no longer required
+  apt:
+    autoremove: true
 
 - name: Update local Database
-  ansible.builtin.command: updatedb
-
-
-
+  command: updatedb
