--- a/roles/common/tasks/firefox.yml
+++ b/roles/common/tasks/firefox.yml
@@ -1,31 +1,8 @@
 --- 
-# Not used -- only for future
 # Firefox personalization
-    - name: Set firefox_default_profile_dir fact
-      ansible.builtin.set_fact:
-        firefox_default_profile_dir: "{{ kali_user_details.home }}/.mozilla/firefox/hacker.default-esr"
-
-    - name: Check if Firefox profile exists
-      ansible.builtin.stat:
-        path: "{{ firefox_default_profile_dir }}"
-      register: firefox_profile
-
-    - name: Create FireFox default profile
-      ansible.builtin.command: "firefox-esr -CreateProfile \"hacker {{ firefox_default_profile_dir }}\""
-      when: not firefox_profile.stat.exists
-
-    - name: Copy Firefox ini files
-      ansible.builtin.copy:
-        src: "files/firefox/{{ item }}"
-        dest: "{{ kali_user_details.home }}/.mozilla/firefox/{{ item }}"
-        mode: 0640
-      loop:
-        - installs.ini
-        - profiles.ini
-
-- name: Copy user.js from quieter-firefox
-      ansible.builtin.copy:
-        src: /opt/quieter-firefox/user.js
-        dest: "{{ firefox_default_profile_dir }}/user.js"
-        remote_src: true
-
+- name: "Updating Firefox Policies"
+  template: 
+    src: "templates/policies.json.j2"
+    dest: "/usr/share/firefox-esr/distribution/policies.json"
+  become: true
+  become_method: sudo
