--- a/roles/common/tasks/pwn.yml
+++ b/roles/common/tasks/pwn.yml
@@ -8,6 +8,22 @@
       "skip" : "y"
     echo: True
 
+- name: Install pwndbg separately
+  command:
+    cmd: /opt/debug/pwndbg/setup.sh
+    chdir: /opt/debug/pwndbg/
+
+- name: Copy debugger binaries
+  copy:
+    src: "/opt/debug/gdb-peda-pwndbg-gef/{{ item }}"
+    dest: "/usr/bin/{{ item }}"
+  loop:
+    - gdb-peda
+    - gdb-peda-arm
+    - gdb-peda-intel
+    - gdb-pwndbg
+    - gdb-gef
+
 - name: Copy gdbinit
   copy:
     src: /opt/debug/gdb-peda-pwndbg-gef/gdbinit
