Fix some issues in tasks, use debug file to track progress of commands

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -19,4 +19,4 @@
     autoremove: true
 
 - name: Update local Database
-  command: updatedb
+  command: /bin/bash -c "updatedb 2>&1 >> {{ log_file }}"
