--- a/roles/common/tasks/pwn.yml
+++ b/roles/common/tasks/pwn.yml
@@ -3,7 +3,7 @@
 
 - name: Install debuggers
   expect:
-    command: /opt/debug/gdb-peda-pwndbg-gef/install.sh
+    command: /bin/bash -c "/opt/debug/gdb-peda-pwndbg-gef/install.sh 2>&1 >> {{ log_file }}"
     responses: # skip responses
       "skip" : "y"
     timeout: null
@@ -15,7 +15,7 @@
 
 - name: Install pwndbg separately
   command:
-    cmd: /opt/debug/pwndbg/setup.sh
+    cmd: /bin/bash -c "yes | /opt/debug/pwndbg/setup.sh 2>&1 >> {{ log_file }}"
     chdir: /opt/debug/pwndbg/
   when: pwndbg_present.stat.exists == False
 
@@ -41,7 +41,7 @@
   command: sed -i "s/~\/\(.*\)\/\(.*\)\.py$/\/opt\/debug\/\1\/\2\.py/" "{{ ansible_env.HOME }}"/.gdbinit
 
 - name: Install one-gadget
-  command: gem install one_gadget
+  command: /bin/bash -c "gem install one_gadget 2>&1 >> {{ log_file }}"
 
 - name: Download patchelf
   git:
@@ -56,8 +56,7 @@
     mode: 0755
 
 - name: Install patchelf
-  shell:
-    /opt/binary/patchelf/install_patchelf.sh
+  command: /bin/bash -c "/opt/binary/patchelf/install_patchelf.sh 2>&1 >> {{ log_file }}"
 
 - name: Copy pwn templates
   copy:
