Add linux cheatsheet

--- a/roles/common/tasks/env.yml
+++ b/roles/common/tasks/env.yml
@@ -43,3 +43,9 @@
     owner: "{{ ansible_env.USER }}"
     group: "{{ ansible_env.USER }}"
     state: link
+
+- name: Copy cheatsheets
+  copy:
+    src: "files/.cheat"
+    dest: "{{ ansible_env.HOME }}/.cheat"
+    mode: 0644
